--- a/mrdc_project.ipynb
+++ b/mrdc_project.ipynb
@@ -2,14 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['JAVA_HOME'] = r'C:\\Program Files\\Java\\jdk-22'\n",
-    "import boto3\n",
-    "import jpype\n",
     "import yaml\n",
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
@@ -19,17 +15,17 @@
     "import numpy as np \n",
     "import tabula\n",
     "import requests\n",
-    "import io\n"
+    "import boto3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DatabaseConnector:\n",
-    "    def __init__(self, yaml_file_path = 'db_creds.yaml'):\n",
+    "    def __init__(self, yaml_file_path):\n",
     "        self.engine = self.init_db_engine()\n",
     "\n",
     "    def read_db_creds(self):\n",
@@ -38,10 +34,10 @@
     "            return db_creds\n",
     "\n",
     "    def init_db_engine(self):\n",
-    "        engine = create_engine(f\"postgresql://{self.read_db_creds()['RDS_USER']}:{self.read_db_creds()['RDS_PASSWORD']}@{self.read_db_creds()['RDS_HOST']}:{self.read_db_creds()['RDS_PORT']}/{self.read_db_creds()['RDS_DATABASE']}\")\n",
+    "        engine = create_engine(f\"postgresql://{self.read_db_creds()['USER']}:{self.read_db_creds()['PASSWORD']}@{self.read_db_creds()['HOST']}:{self.read_db_creds()['PORT']}/{self.read_db_creds()['DATABASE']}\")\n",
     "        engine.execution_options(isolation_level = 'AUTOCOMMIT').connect()\n",
     "        return engine\n",
-    "        \n",
+    "    \n",
     "    def list_db_tables(self):\n",
     "        inspector = inspect(self.engine) \n",
     "        db_tables = inspector.get_table_names()\n",
@@ -54,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +121,8 @@
     }
    ],
    "source": [
-    "RDS_CONNECTOR = DatabaseConnector()\n",
+    "yaml_file_path = 'db_creds.yaml'\n",
+    "RDS_CONNECTOR = DatabaseConnector(yaml_file_path)\n",
     "\n",
     "RDS_CONNECTOR.init_db_engine()\n",
     "       \n",
@@ -156,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -317,8 +314,8 @@
       "\u001b[1;31mReadOnlySqlTransaction\u001b[0m: cannot execute CREATE TABLE in a read-only transaction\n",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mInternalError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m clean_user_data \u001b[38;5;241m=\u001b[39m DataCleaning(user_data_df)\n\u001b[0;32m      2\u001b[0m cleaned_user_data \u001b[38;5;241m=\u001b[39m clean_user_data\u001b[38;5;241m.\u001b[39mclean_legacy_users()\n\u001b[1;32m----> 3\u001b[0m \u001b[43mRDS_CONNECTOR\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupload_to_db\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcleaned_user_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdim_users\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m clean_orders_data \u001b[38;5;241m=\u001b[39m DataCleaning(orders_df)\n\u001b[0;32m      6\u001b[0m cleaned_orders_data \u001b[38;5;241m=\u001b[39m clean_orders_data\u001b[38;5;241m.\u001b[39mclean_orders_data()\n",
-      "Cell \u001b[1;32mIn[2], line 21\u001b[0m, in \u001b[0;36mDatabaseConnector.upload_to_db\u001b[1;34m(self, df, table_name)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mupload_to_db\u001b[39m(\u001b[38;5;28mself\u001b[39m, df, table_name):\n\u001b[1;32m---> 21\u001b[0m     \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_sql\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtable_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcon\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mif_exists\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mreplace\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[39], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m clean_user_data \u001b[38;5;241m=\u001b[39m DataCleaning(user_data_df)\n\u001b[0;32m      7\u001b[0m cleaned_user_data \u001b[38;5;241m=\u001b[39m clean_user_data\u001b[38;5;241m.\u001b[39mclean_legacy_users()\n\u001b[1;32m----> 8\u001b[0m \u001b[43mLOCAL_CONNECTOR\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupload_to_db\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcleaned_user_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdim_users\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m clean_orders_data \u001b[38;5;241m=\u001b[39m DataCleaning(orders_df)\n\u001b[0;32m     11\u001b[0m cleaned_orders_data \u001b[38;5;241m=\u001b[39m clean_orders_data\u001b[38;5;241m.\u001b[39mclean_orders_data()\n",
+      "Cell \u001b[1;32mIn[35], line 21\u001b[0m, in \u001b[0;36mDatabaseConnector.upload_to_db\u001b[1;34m(self, df, table_name)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mupload_to_db\u001b[39m(\u001b[38;5;28mself\u001b[39m, df, table_name):\n\u001b[1;32m---> 21\u001b[0m     \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_sql\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtable_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcon\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mif_exists\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mreplace\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Users\\holme\\miniconda3\\envs\\mrdc\\lib\\site-packages\\pandas\\util\\_decorators.py:333\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    327\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) \u001b[38;5;241m>\u001b[39m num_allow_args:\n\u001b[0;32m    328\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m    329\u001b[0m         msg\u001b[38;5;241m.\u001b[39mformat(arguments\u001b[38;5;241m=\u001b[39m_format_argument_list(allow_args)),\n\u001b[0;32m    330\u001b[0m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[0;32m    331\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39mfind_stack_level(),\n\u001b[0;32m    332\u001b[0m     )\n\u001b[1;32m--> 333\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
       "File \u001b[1;32mc:\\Users\\holme\\miniconda3\\envs\\mrdc\\lib\\site-packages\\pandas\\core\\generic.py:3084\u001b[0m, in \u001b[0;36mNDFrame.to_sql\u001b[1;34m(self, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[0;32m   2886\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   2887\u001b[0m \u001b[38;5;124;03mWrite records stored in a DataFrame to a SQL database.\u001b[39;00m\n\u001b[0;32m   2888\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3080\u001b[0m \u001b[38;5;124;03m[(1,), (None,), (2,)]\u001b[39;00m\n\u001b[0;32m   3081\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m  \u001b[38;5;66;03m# noqa: E501\u001b[39;00m\n\u001b[0;32m   3082\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sql\n\u001b[1;32m-> 3084\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msql\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_sql\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   3085\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3086\u001b[0m \u001b[43m    \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3087\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcon\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3088\u001b[0m \u001b[43m    \u001b[49m\u001b[43mschema\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mschema\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3089\u001b[0m \u001b[43m    \u001b[49m\u001b[43mif_exists\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mif_exists\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3090\u001b[0m \u001b[43m    \u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3091\u001b[0m \u001b[43m    \u001b[49m\u001b[43mindex_label\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex_label\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3092\u001b[0m \u001b[43m    \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchunksize\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3093\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3094\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmethod\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmethod\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3095\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Users\\holme\\miniconda3\\envs\\mrdc\\lib\\site-packages\\pandas\\io\\sql.py:842\u001b[0m, in \u001b[0;36mto_sql\u001b[1;34m(frame, name, con, schema, if_exists, index, index_label, chunksize, dtype, method, engine, **engine_kwargs)\u001b[0m\n\u001b[0;32m    837\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\n\u001b[0;32m    838\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mframe\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m argument should be either a Series or a DataFrame\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    839\u001b[0m     )\n\u001b[0;32m    841\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m pandasSQL_builder(con, schema\u001b[38;5;241m=\u001b[39mschema, need_transaction\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m pandas_sql:\n\u001b[1;32m--> 842\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pandas_sql\u001b[38;5;241m.\u001b[39mto_sql(\n\u001b[0;32m    843\u001b[0m         frame,\n\u001b[0;32m    844\u001b[0m         name,\n\u001b[0;32m    845\u001b[0m         if_exists\u001b[38;5;241m=\u001b[39mif_exists,\n\u001b[0;32m    846\u001b[0m         index\u001b[38;5;241m=\u001b[39mindex,\n\u001b[0;32m    847\u001b[0m         index_label\u001b[38;5;241m=\u001b[39mindex_label,\n\u001b[0;32m    848\u001b[0m         schema\u001b[38;5;241m=\u001b[39mschema,\n\u001b[0;32m    849\u001b[0m         chunksize\u001b[38;5;241m=\u001b[39mchunksize,\n\u001b[0;32m    850\u001b[0m         dtype\u001b[38;5;241m=\u001b[39mdtype,\n\u001b[0;32m    851\u001b[0m         method\u001b[38;5;241m=\u001b[39mmethod,\n\u001b[0;32m    852\u001b[0m         engine\u001b[38;5;241m=\u001b[39mengine,\n\u001b[0;32m    853\u001b[0m         \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mengine_kwargs,\n\u001b[0;32m    854\u001b[0m     )\n",
@@ -344,30 +341,35 @@
     }
    ],
    "source": [
+    "yaml_file_path2 = 'local_db_cred.yaml'\n",
+    "LOCAL_CONNECTOR = DatabaseConnector(yaml_file_path2)\n",
+    "\n",
+    "LOCAL_CONNECTOR.init_db_engine()\n",
+    "\n",
     "clean_user_data = DataCleaning(user_data_df)\n",
     "cleaned_user_data = clean_user_data.clean_legacy_users()\n",
-    "RDS_CONNECTOR.upload_to_db(cleaned_user_data, 'dim_users')\n",
+    "LOCAL_CONNECTOR.upload_to_db(cleaned_user_data, 'dim_users')\n",
     "\n",
     "clean_orders_data = DataCleaning(orders_df)\n",
     "cleaned_orders_data = clean_orders_data.clean_orders_data()\n",
-    "RDS_CONNECTOR.upload_to_db(cleaned_orders_data, 'orders_table')\n",
+    "LOCAL_CONNECTOR.upload_to_db(cleaned_orders_data, 'orders_table')\n",
     "\n",
     "clean_card_details_data = DataCleaning(card_details_df)\n",
     "cleaned_card_details_data = clean_card_details_data.clean_card_data()\n",
-    "RDS_CONNECTOR.upload_to_db(cleaned_card_details_data, 'dim_card_details')\n",
+    "LOCAL_CONNECTOR.upload_to_db(cleaned_card_details_data, 'dim_card_details')\n",
     "\n",
     "clean_stores_data = DataCleaning(stores_df)\n",
     "cleaned_stores_data = clean_stores_data.clean_store_data()\n",
-    "RDS_CONNECTOR.upload_to_db(cleaned_stores_data, 'dim_store_details')\n",
+    "LOCAL_CONNECTOR.upload_to_db(cleaned_stores_data, 'dim_store_details')\n",
     "\n",
     "clean_product_data = DataCleaning(product_df)\n",
     "cleaned_product_data = clean_product_data.convert_product_weights()\n",
     "cleaned_product_data = clean_product_data.clean_products_data()\n",
-    "RDS_CONNECTOR.upload_to_db(cleaned_product_data, 'dim_products')\n",
+    "LOCAL_CONNECTOR.upload_to_db(cleaned_product_data, 'dim_products')\n",
     "\n",
     "clean_date_events_data = DataCleaning(date_events_df)\n",
     "cleaned_date_events_data = clean_date_events_data.clean_data_events()\n",
-    "RDS_CONNECTOR.upload_to_db(cleaned_date_events_data, 'dim_dates_times')"
+    "LOCAL_CONNECTOR.upload_to_db(cleaned_date_events_data, 'dim_dates_times')"
    ]
   }
  ],
