--- a/mrdc_project.ipynb
+++ b/mrdc_project.ipynb
@@ -9,15 +9,18 @@
     "import os\n",
     "os.environ['JAVA_HOME'] = r'C:\\Program Files\\Java\\jdk-22'\n",
     "import yaml\n",
+    "\n",
+    "from pandasgui import show\n",
     "from sqlalchemy import create_engine\n",
-    "import pandas as pd\n",
     "from sqlalchemy import inspect\n",
     "from sqlalchemy import text\n",
-    "from pandasgui import show\n",
+    "\n",
+    "import boto3\n",
     "import numpy as np \n",
-    "import tabula\n",
+    "import pandas as pd\n",
     "import requests\n",
-    "import boto3\n"
+    "import tabula\n",
+    "import yaml\n"
    ]
   },
   {
@@ -53,69 +56,65 @@
     }
    ],
    "source": [
-    "yaml_file_path = 'db_creds.yaml'\n",
-    "RDS_CONNECTOR = DatabaseConnector(yaml_file_path)\n",
+    "if __name__ == \"__main__\":\n",
     "\n",
-    "RDS_CONNECTOR.init_db_engine()\n",
-    "       \n",
-    "Display_Data = DataExtractor(RDS_CONNECTOR.engine)\n",
+    "    yaml_file_path = 'db_creds.yaml'\n",
     "\n",
-    "store_details_df = Display_Data.reads_rds_table(\"legacy_store_details\")\n",
-    "user_data_df = Display_Data.reads_rds_table(\"legacy_users\")\n",
-    "orders_df = Display_Data.reads_rds_table(\"orders_table\")\n",
+    "    RDS_CONNECTOR = DatabaseConnector(yaml_file_path)\n",
     "\n",
-    "pdf_url = 'https://data-handling-public.s3.eu-west-1.amazonaws.com/card_details.pdf'\n",
-    "card_details_df = Display_Data.retrieve_pdf_data(pdf_url)\n",
+    "    RDS_CONNECTOR.init_db_engine()\n",
+    "        \n",
+    "    Display_Data = DataExtractor(RDS_CONNECTOR.engine)\n",
+    "\n",
+    "    store_details_df = Display_Data.reads_rds_table(\"legacy_store_details\")\n",
+    "    user_data_df = Display_Data.reads_rds_table(\"legacy_users\")\n",
+    "    orders_df = Display_Data.reads_rds_table(\"orders_table\")\n",
+    "\n",
+    "    pdf_url = 'https://data-handling-public.s3.eu-west-1.amazonaws.com/card_details.pdf'\n",
+    "    card_details_df = Display_Data.retrieve_pdf_data(pdf_url)\n",
     "\n",
     "\n",
-    "number_of_stores_endpoint = 'https://aqj7u5id95.execute-api.eu-west-1.amazonaws.com/prod/number_stores'\n",
-    "retrieve_store_endpoint = 'store_details'\n",
+    "    number_of_stores_endpoint = 'https://aqj7u5id95.execute-api.eu-west-1.amazonaws.com/prod/number_stores'\n",
+    "    retrieve_store_endpoint = 'store_details'\n",
     "\n",
-    "number_of_stores = Display_Data.list_number_of_stores(number_of_stores_endpoint)\n",
-    "stores_df = Display_Data.retrieve_stores_data(retrieve_store_endpoint, number_of_stores)\n",
+    "    number_of_stores = Display_Data.list_number_of_stores(number_of_stores_endpoint)\n",
+    "    stores_df = Display_Data.retrieve_stores_data(retrieve_store_endpoint, number_of_stores)\n",
     "\n",
-    "s3_address = 's3://data-handling-public/products.csv'\n",
-    "product_df = Display_Data.extract_from_s3(s3_address)\n",
+    "    s3_address = 's3://data-handling-public/products.csv'\n",
+    "    product_df = Display_Data.extract_from_s3(s3_address)\n",
     "\n",
-    "date_events_url = 'https://data-handling-public.s3.eu-west-1.amazonaws.com/date_details.json'\n",
-    "date_events_df = Display_Data.extract_date_events_data(date_events_url)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yaml_file_path2 = 'local_db_cred.yaml'\n",
-    "LOCAL_CONNECTOR = DatabaseConnector(yaml_file_path2)\n",
+    "    date_events_url = 'https://data-handling-public.s3.eu-west-1.amazonaws.com/date_details.json'\n",
+    "    date_events_df = Display_Data.extract_date_events_data(date_events_url)\n",
     "\n",
-    "LOCAL_CONNECTOR.init_db_engine()\n",
+    "    yaml_file_path2 = 'local_db_cred.yaml'\n",
+    "    LOCAL_CONNECTOR = DatabaseConnector(yaml_file_path2)\n",
     "\n",
-    "clean_user_data = DataCleaning(user_data_df)\n",
-    "cleaned_user_data = clean_user_data.clean_legacy_users()\n",
-    "LOCAL_CONNECTOR.upload_to_db(cleaned_user_data, 'dim_users')\n",
+    "    LOCAL_CONNECTOR.init_db_engine()\n",
     "\n",
-    "clean_orders_data = DataCleaning(orders_df)\n",
-    "cleaned_orders_data = clean_orders_data.clean_orders_data()\n",
-    "LOCAL_CONNECTOR.upload_to_db(cleaned_orders_data, 'orders_table')\n",
+    "    clean_user_data = DataCleaning(user_data_df)\n",
+    "    cleaned_user_data = clean_user_data.clean_legacy_users()\n",
+    "    LOCAL_CONNECTOR.upload_to_db(cleaned_user_data, 'dim_users')\n",
     "\n",
-    "clean_card_details_data = DataCleaning(card_details_df)\n",
-    "cleaned_card_details_data = clean_card_details_data.clean_card_data()\n",
-    "LOCAL_CONNECTOR.upload_to_db(cleaned_card_details_data, 'dim_card_details')\n",
+    "    clean_orders_data = DataCleaning(orders_df)\n",
+    "    cleaned_orders_data = clean_orders_data.clean_orders_data()\n",
+    "    LOCAL_CONNECTOR.upload_to_db(cleaned_orders_data, 'orders_table')\n",
     "\n",
-    "clean_stores_data = DataCleaning(stores_df)\n",
-    "cleaned_stores_data = clean_stores_data.clean_store_data()\n",
-    "LOCAL_CONNECTOR.upload_to_db(cleaned_stores_data, 'dim_store_details')\n",
+    "    clean_card_details_data = DataCleaning(card_details_df)\n",
+    "    cleaned_card_details_data = clean_card_details_data.clean_card_data()\n",
+    "    LOCAL_CONNECTOR.upload_to_db(cleaned_card_details_data, 'dim_card_details')\n",
     "\n",
-    "clean_product_data = DataCleaning(product_df)\n",
-    "cleaned_product_data = clean_product_data.clean_products_data()\n",
-    "cleaned_product_data = clean_product_data.convert_product_weights()\n",
-    "LOCAL_CONNECTOR.upload_to_db(cleaned_product_data, 'dim_products')\n",
+    "    clean_stores_data = DataCleaning(stores_df)\n",
+    "    cleaned_stores_data = clean_stores_data.clean_store_data()\n",
+    "    LOCAL_CONNECTOR.upload_to_db(cleaned_stores_data, 'dim_store_details')\n",
     "\n",
-    "clean_date_events_data = DataCleaning(date_events_df)\n",
-    "cleaned_date_events_data = clean_date_events_data.clean_date_events_data()\n",
-    "LOCAL_CONNECTOR.upload_to_db(cleaned_date_events_data, 'dim_dates_times')"
+    "    clean_product_data = DataCleaning(product_df)\n",
+    "    cleaned_product_data = clean_product_data.clean_products_data()\n",
+    "    cleaned_product_data = clean_product_data.convert_product_weights()\n",
+    "    LOCAL_CONNECTOR.upload_to_db(cleaned_product_data, 'dim_products')\n",
+    "\n",
+    "    clean_date_events_data = DataCleaning(date_events_df)\n",
+    "    cleaned_date_events_data = clean_date_events_data.clean_date_events_data()\n",
+    "    LOCAL_CONNECTOR.upload_to_db(cleaned_date_events_data, 'dim_dates_times')\n"
    ]
   }
  ],
